# pytest-adbc-replay

./: .cliff.toml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DEVELOP.md  LICENSE  README.md  cliff.toml  justfile  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: _test.yml  ci.yml  docs.yml  pr.yml  release.yml  weekly.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0.0a1-MILESTONE-AUDIT.md  v1.0.0a1-REQUIREMENTS.md
.planning/phases/01-plugin-skeleton-and-cursor-proxy/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-SUMMARY.md  01-03-PLAN.md
.planning/phases/02-record-replay-engine/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md  02-03-SUMMARY.md
.planning/phases/03-configuration-dx-and-integration-testing/: .continue-here.md  03-01-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md
.planning/phases/04-type-exports-and-pypi-metadata/: 04-01-PLAN.md  04-CONTEXT.md
.planning/phases/05-readme-and-changelog/: 05-CONTEXT.md  05-VERIFICATION.md
.planning/phases/06-mkdocs-documentation-site/: 06-01-PLAN.md  06-01-SUMMARY.md  06-04-SUMMARY.md  06-05-PLAN.md  06-05-SUMMARY.md  06-CONTEXT.md  06-VERIFICATION.md
.planning/phases/07-publishing-automation/: 07-01-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md
.planning/phases/08-automatic-adbc-wrapping/: 08-03-PLAN.md  08-03-SUMMARY.md  08-CONTEXT.md
.planning/phases/09-implement-and-document-the-adbc-scrubber-interface-consider-if-we-can-offer-a-default-scrubbing-already-enabled-perhaps-with-keys-specified-via-config/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-CONTEXT.md
.planning/phases/10-per-driver-adbc-dialect-config-and-dialect-docs-review/: 10-01-PLAN.md  10-01-SUMMARY.md  10-03-PLAN.md  10-03-SUMMARY.md  10-VERIFICATION.md
.planning/quick/1-use-mkdocs-material-two-level-nav-with-t/: 1-PLAN.md  1-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
_notes/: pytest-adbc-replay-design.md
docs/scripts/: gen_changelog.py  gen_ref_pages.py
docs/src/: index.md
docs/src/explanation/: cassette-format-rationale.md  index.md  record-mode-semantics.md  sql-normalisation-design.md
docs/src/how-to/: cassette-names.md  ci-without-credentials.md  configure-via-ini.md  custom-param-serialisers.md  index.md  (+2 more)
src/pytest_adbc_replay/: __init__.py  _cassette_io.py  _cassette_path.py  _connection.py  _cursor.py  _exceptions.py  _normaliser.py  _params.py  _session.py  plugin.py
tests/: conftest.py  test_auto_patch.py  test_cassette_io.py  test_cassette_path.py  test_cursor.py  test_integration.py  test_normaliser.py  test_params.py  test_plugin.py  test_pytest_adbc_replay.py  test_record_modes.py  test_scrubbing.py
(+48 files in other folders)
