[project]
name = "pytest-adbc-replay"
version = "0.1.0"
description = "pytest plugin to record and replay ADBC database queries"
readme = "README.md"
authors = [
    { name = "Anentropic", email = "ego@anentropic.com" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Pytest",
    "Topic :: Software Development :: Testing",
    "Topic :: Database",
]
keywords = ["pytest", "adbc", "database", "testing", "cassette", "record", "replay", "vcr", "arrow"]
dependencies = [
    "adbc-driver-manager>=1.0.0",
    "pyarrow>=14.0",
    "sqlglot>=23.0",
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/TODO/pytest-adbc-replay"
Source = "https://github.com/TODO/pytest-adbc-replay"
Issues = "https://github.com/TODO/pytest-adbc-replay/issues"
Documentation = "https://TODO.github.io/pytest-adbc-replay"

[build-system]
requires = ["uv_build>=0.9.18,<1.0.0"]
build-backend = "uv_build"

[project.entry-points.pytest11]
adbc-replay = "pytest_adbc_replay.plugin"

[dependency-groups]
dev = [
    "adbc-driver-sqlite>=1.0.0",
    "basedpyright>=1.38.0",
    "ipython>=9.10.0",
    "pdbpp>=0.12.0.post1",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.1",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
]

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["src", "tests"]
reportPrivateUsage = false
# pyarrow and adbc-driver-manager do not ship type stubs
reportMissingTypeStubs = false
# pyarrow's API returns untyped values; suppress cascading unknown-type errors
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "D"]
ignore = [
    "D1",    # don't require docstrings everywhere
    "D202",  # allow blank line after docstring (common in tests)
    "D203",  # conflicts with D211 (no blank line before class docstring)
    "D212",  # conflicts with D213 (multiline summary on second line)
    "D401",  # imperative mood is awkward for dunder methods
    "D413",  # blank line after last section not required
]
